k8s/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-frontend
  namespace: finops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fintech-frontend
  template:
    metadata:
      labels:
        app: fintech-frontend
    spec:
      containers:
        - name: frontend
          image: fintech-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: fintech-frontend
  namespace: finops
spec:
  selector:
    app: fintech-frontend
  ports:
    - port: 80
      targetPort: 80
